prevent images in carousel-item to be stretched

--- a/assets/sass/bootstrap/_carousel.scss
+++ b/assets/sass/bootstrap/_carousel.scss
@@ -17,6 +17,7 @@
 }
 
 .carousel-item {
+  align-items: center;
   display: none;
   position: relative;
   width: 100%;
